[package]
name = "horti-types"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_derive = "1"
derivative = "2.2.0"
chrono = { version = "0.4.28", features = ["serde"] }
base64 = "0.22.1"
base64-serde = "0.7.0"
machine-uid = "0.5.1"

[features]
dbus = []
