[package]
name = "horti-types"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = { version = "0.9.7", optional = true }
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_derive = "1"
derivative = "2.2.0"
chrono = { version = "0.4.28", features = ["serde"] }
base64 = "0.22.1"
base64-serde = "0.8.0"
machine-uid = { version = "0.5.3", optional = true }
bincode = { version = "2.0.1", features = ["serde"] }

[features]
default = []
dbus = ["dep:dbus", "dep:machine-uid"]
